Finished hw5 part 1
Made all of the necessary changes to add the “Merge articles” feature,
including the proper cucumber tests to test the functionality

--- a/app/views/admin/shared/_edit.html.erb
+++ b/app/views/admin/shared/_edit.html.erb
@@ -4,3 +4,17 @@
   <%= render :partial => "form" %>
 
 <% end %>
+<% if @admin and @edit %>
+  <%= form_tag('/admin/content/merge/', :id => "merge_form", :enctype => "multipart/form-data", :class => "Merge") do %>
+    <div class = ''>
+      <h4><%= _("Merge Articles") %></h4>
+      <div class=''>
+        <%= hidden_field(:article, :id, :value => @article.id) %>
+        <%= label 'merge', 'with', "Article ID" %>
+        <%= text_field 'merge', 'with' %>
+        <br>
+        <%= submit_tag "Merge" %>
+      </div>
+    </div>
+  <% end %>
+<% end %>
